<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:orientation="vertical"
            android:padding="4dp" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center_vertical"
                android:text="@string/run_adb_via"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="4dp" >

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" >

            <RadioButton
                android:id="@+id/radio0"
                android:layout_width="wrap_content"
                android:layout_height="52dp"
                android:paddingBottom="4dp"
                android:text="@string/tcp_ip" />

            <RadioButton
                android:id="@+id/radio1"
                android:layout_width="wrap_content"
                android:layout_height="52dp"
                android:paddingTop="4dp"
                android:text="@string/usb" />

        </RadioGroup>
         </LinearLayout>

    
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="56dp"
        android:orientation="vertical"
        android:padding="4dp" >

        <EditText
            android:id="@+id/editText1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:ems="10"
            android:hint="@string/port_num"
            android:inputType="number"
            android:maxLength="4" >

            <requestFocus />
        </EditText>

    </LinearLayout>
        
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="56dp"
        android:orientation="vertical"
        android:padding="4dp" >

        <Button
            android:id="@+id/button1"
            android:layout_width="144dp"
            android:layout_height="fill_parent"
            android:background="@drawable/btn_bg"
            android:text="@string/set_adb" />

    </LinearLayout>
    
    </LinearLayout>
    </ScrollView>