<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="56dp"
            android:background="@drawable/grey_gradient"
            android:padding="4dp" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:gravity="center_vertical"
                    android:text="@string/title_activity_edit_host"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </LinearLayout>

        </LinearLayout>
    
    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
    
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0,1,2,3" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="fill_parent"
            android:layout_height="48dp" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_span="4"
                android:orientation="vertical"
                android:padding="4dp" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:gravity="bottom"
                    android:text="@string/ip_addr"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
                
            </LinearLayout>

        </TableRow>
        
        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="fill_parent"
            android:layout_height="56dp" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:padding="4dp" >

                <EditText
                    android:id="@+id/editText1"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:inputType="number"
                    android:maxLength="3" >
                    
                </EditText>

            </LinearLayout>
            
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:padding="4dp" >
                
                <EditText
                    android:id="@+id/editText2"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:inputType="number"
                    android:maxLength="3" >

                  
                </EditText>
                
            </LinearLayout>
            
            <LinearLayout
               android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:padding="4dp" >
                
                <EditText
                    android:id="@+id/editText3"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:inputType="number"
                    android:maxLength="3" >

                   
                </EditText>
                
            </LinearLayout>
            
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:padding="4dp" >
                
                <EditText
                    android:id="@+id/editText4"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:inputType="number"
                    android:maxLength="3" >

                 
                </EditText>
                
            </LinearLayout>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="fill_parent"
            android:layout_height="48dp" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_span="4"
                android:orientation="vertical"
                android:padding="4dp" >

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:gravity="bottom"
                    android:text="@string/h_name"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </LinearLayout>

        </TableRow>
       
        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="fill_parent"
            android:layout_height="56dp" >


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:layout_span="4"
                android:padding="4dp" >
                
                <EditText
                    android:id="@+id/editText5"
                    android:layout_width="fill_parent"
                    android:layout_height="48dp"
                    android:ems="10" />
                
            </LinearLayout>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="fill_parent"
            android:layout_height="56dp" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:padding="4dp"
                android:layout_span="4" >

                <Button
                    android:id="@+id/button1"
                    android:layout_width="144dp"
                    android:layout_height="48dp"
                    android:background="@drawable/btn_bg"
                    android:text="@string/save" />

            </LinearLayout>

        </TableRow>
        
    </TableLayout>

    
    </ScrollView>

</LinearLayout>
